# spin-game

./: .gitignore  .gitmodules  CMakeLists.txt
shaders/: quad.vert  texture.frag  texture.vert  triangle.frag  triangle.vert
src/: actor.c  actor.h  camera.c  camera.h  controls.c  controls.h  keyboard.c  keyboard.h  main.c  shader.c  shader.h  texture.c  texture.glsl.h  texture.h  util.h
